implemented add, delete, get scrip to/ from watchlists
