# src/app/watchlists/docs/swagger.json
@@ -1,7 +1,194 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "Watchlists ADD DEL GET APIs for Stock Broker Application",
+        "title": "Watchlists ADG Service API",
+        "contact": {},
+        "version": "1.0"
     },
-    "paths": {}
+    "paths": {
+        "/adg/scrip": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "verifies the JWT and adds/ deletes/ gets the scrip in the request to/ from the list of watchlists",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Watchlist"
+                ],
+                "summary": "Perform ADG for watchlist",
+                "parameters": [
+                    {
+                        "description": "ADG Watchlist Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.BffAdgStoWatchlistRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ADG Performed successfully",
+                        "schema": {
+                            "$ref": "#/definitions/models.BffAdgStoWatchlistResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input payload",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorAPIResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Case A: JWT expired / Case B: JWT invalid / Case C: Unauthorized request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorAPIResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "User does not exist",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorAPIResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorAPIResponse"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.Actiontype": {
+            "type": "string",
+            "enum": [
+                "ADD",
+                "DEL",
+                "GET"
+            ],
+            "x-enum-varnames": [
+                "AddAction",
+                "DelAction",
+                "GetAction"
+            ]
+        },
+        "models.BffAdgStoWatchlistRequest": {
+            "type": "object",
+            "required": [
+                "action",
+                "scripId"
+            ],
+            "properties": {
+                "action": {
+                    "description": "ADD or  DEL or GET",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Actiontype"
+                        }
+                    ],
+                    "example": "GET"
+                },
+                "scripId": {
+                    "type": "string",
+                    "example": "RELI_2018"
+                },
+                "watchlistIds": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    },
+                    "example": [
+                        1,
+                        2,
+                        3
+                    ]
+                }
+            }
+        },
+        "models.BffAdgStoWatchlistResponse": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "description": "the one from the request",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Actiontype"
+                        }
+                    ]
+                },
+                "status": {
+                    "description": "success or failure, if succeded - descriptive message, if failed - failed adding/ deleting/ getting scrip to wathclist...",
+                    "type": "string"
+                },
+                "warnings": {
+                    "description": "only while adding if a scrip already exists in a watchlist",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "watchlistNames": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.WatchlistWithId"
+                    }
+                }
+            }
+        },
+        "models.ErrorAPIResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "errors": {
+                    "$ref": "#/definitions/models.ErrorMessage"
+                }
+            }
+        },
+        "models.ErrorMessage": {
+            "type": "object",
+            "properties": {
+                "errorMessage": {
+                    "type": "string"
+                },
+                "key": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.WatchlistWithId": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header",
+            "x-extension-openapi": "{\"example\": \"value on a json format\"}"
+        }
+    }
 }
