# src/app/watchlists/handlers/adgStoWatchlistHandler.go
@@ -5,6 +5,7 @@ import (
 
 	"encoding/json"
 	"net/http"
+	"stock_broker_application/src/utils/validations"
 	"watchlists/business"
 	"watchlists/commons"
 	"watchlists/models"
@@ -24,6 +25,21 @@ func NewAdgStoWatchlistHandler(adgStoWatchlistService *business.AdgStoWatchlistS
 	}
 }
 
+// this fucntion handles user requests for add, delete and get scrips to/ from a list of watchlists
+// Handles ADG scrip to watchlist functionality
+// @Summary Perform ADG for watchlist
+// @Description verifies the JWT and adds/ deletes/ gets the scrip in the request to/ from the list of watchlists
+// @Tags Watchlist
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param request body models.BffAdgStoWatchlistRequest true "ADG Watchlist Request"
+// @Success 200 {object} models.BffAdgStoWatchlistResponse "ADG Performed successfully"
+// @Failure 400 {object} models.ErrorAPIResponse "Invalid input payload"
+// @Failure 401 {object} models.ErrorAPIResponse "Case A: JWT expired / Case B: JWT invalid / Case C: Unauthorized request"
+// @Failure 404 {object} models.ErrorAPIResponse "User does not exist"
+// @Failure 500 {object} models.ErrorAPIResponse "Internal Server Error"
+// @Router /adg/scrip [post]
 func (controller *AdgStoWatchlistHandler) HandleAdgStoWatchlist(ctx *gin.Context) {
 	var bffAdgStoWatchlistRequest models.BffAdgStoWatchlistRequest
 	// reqAction := strings.ToLower((bffAdgStoWatchlistRequest.Action))
@@ -40,11 +56,11 @@ func (controller *AdgStoWatchlistHandler) HandleAdgStoWatchlist(ctx *gin.Context
 		return
 	}
 
-	// if err := validations.GetBFFValidator().Struct(&bffAdgStoWatchlistRequest); err != nil {
-	// 	validationError, _ := validations.FormatValidationErrors(err)
-	// 	ctx.IndentedJSON(http.StatusBadRequest, validationError)
-	// 	return
-	// }
+	if err := validations.GetBFFValidator().Struct(&bffAdgStoWatchlistRequest); err != nil {
+		validationError, _ := validations.FormatValidationErrors(err)
+		ctx.IndentedJSON(http.StatusBadRequest, validationError)
+		return
+	}
 
 	username := ctx.GetString(commons.Username)
 
@@ -53,9 +69,10 @@ func (controller *AdgStoWatchlistHandler) HandleAdgStoWatchlist(ctx *gin.Context
 		ctx.IndentedJSON(http.StatusBadRequest, err.Error())
 		return
 	}
+
 	ctx.IndentedJSON(http.StatusOK, models.BffAdgStoWatchlistResponse{
 		Status:          "success",
-		Action:          constants.Actiontype(bffAdgStoWatchlistRequest.Action),
+		Action:          models.Actiontype(bffAdgStoWatchlistRequest.Action),
 		WatchlistWithId: respWatchlistsWithIds,
 		Warnings:        warnings,
 	})
